--- a/style_maquette_finale2.css
+++ b/style_maquette_finale2.css
@@ -25,6 +25,9 @@ p{
     font-family: "Raleway",'Courier New', Courier, monospace; 
   margin: 5px 0px 0px 0px;
   }
+  a:link { 
+      text-decoration:none; 
+    } 
     header{
     display: flex;
     flex-direction: row;
@@ -60,6 +63,7 @@ p{
             .trouver{
             width: 60%;
             margin-left: 10px;
+            margin-top: 20px;
             }
             .zone{
             margin: 10px 0 20px 0;
