--- a/style_reservia.css
+++ b/style_reservia.css
@@ -15,6 +15,11 @@ body {
   padding: 0px;
 }
 
+body a {
+  text-decoration: none;
+  color: black;
+}
+
 h1 {
   font-size: 14px;
   font-family: "Ralewaybolt", 'Courier New', Courier, monospace;
@@ -33,10 +38,6 @@ p {
   font-size: 12px;
   font-family: "Raleway", 'Courier New', Courier, monospace;
   margin: 5px 0px 0px 0px;
-}
-
-a:link {
-  text-decoration: none;
 }
 
 header {
@@ -82,9 +83,12 @@ header {
 }
 
 .heb {
-  font-family: "Ralewaybolt", 'Courier New', Courier, monospace;
   border-top: 2px solid #0065fc;
   width: 100%;
+}
+
+.heb a {
+  color: #0065fc;
 }
 
 .act {
@@ -92,9 +96,17 @@ header {
   width: 100%;
 }
 
+.act a {
+  color: black;
+}
+
 .ins {
   margin-top: 2px;
   width: 100%;
+}
+
+.ins a {
+  color: #0065fc;
 }
 
 .link1 :hover {
